# bsoncxx

./: README.md  meson.build
lib/: libbsoncxx.so.4.1.0  libbsoncxx.so._noabi
